[package]
name = "prog2"
version = "0.1.0"
authors = ["Kimmo Matias Vuori Liikaluoma <vuoriliikaluoma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"

[[bin]]
name = "prog2"
path = "prog2.rs"
